--- a/timetable.html
+++ b/timetable.html
@@ -90,9 +90,9 @@
             <div class="class-teacher">J. Marek</div>
           </div>
           <div class="class-item lab">
-            <div class="class-time">11:00 – 11:50</div>
+            <div class="class-time">13:00 – 14:30</div>
             <div class="class-name" data-en="Physical Education" data-sk="Telesná kultúra">Telesná kultúra</div>
-            <div class="class-teacher">M. Jeleň</div>
+            <div class="class-teacher">J. Pajkoš</div>
           </div>
         </div>
 
